# fastapi_sample

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
fastapi_sample/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  settings.py
fastapi_sample/db/: base.py  utils.py
fastapi_sample/db/dao/: dummy_dao.py
fastapi_sample/db/models/: __init__.py  dummy_model.py
fastapi_sample/services/: __init__.py
fastapi_sample/services/redis/: lifetime.py
fastapi_sample/tests/: __init__.py  test_dummy.py
fastapi_sample/web/: __init__.py  application.py  lifetime.py
fastapi_sample/web/api/: __init__.py  base_response.py  exception.py  router.py
fastapi_sample/web/api/docs/: __init__.py
fastapi_sample/web/api/dummy/: __init__.py  views.py
fastapi_sample/web/api/echo/: __init__.py  exception.py  schema.py  views.py
fastapi_sample/web/api/monitoring/: __init__.py
fastapi_sample/web/api/redis/: __init__.py  views.py
